--- a/.drone.yml
+++ b/.drone.yml
@@ -10,4 +10,4 @@ steps:
 - name: deploy
   image: plugins/hugo
   commands:
-    hugo deploy --target=mydeployment
+    - hugo deploy --target=mydeployment
