--- a/.drone.yml
+++ b/.drone.yml
@@ -9,5 +9,12 @@ steps:
 
 - name: deploy
   image: plugins/hugo
+  environment:
+  AWS_DEFAULT_REGION:
+    from_secret: AWS_DEFAULT_REGION
+  AWS_DEFAULT_REGION:
+    from_secret: AWS_ACCESS_KEY_ID
+  AWS_DEFAULT_REGION:
+    from_secret: AWS_SECRET_ACCESS_KEY
   commands:
     - hugo deploy --target=mydeployment
