--- a/.drone.yml
+++ b/.drone.yml
@@ -8,14 +8,16 @@ steps:
     validate: true
 
 - name: deploy
-  image: jhauer1/hugo-build-deploy:v0.0.1
+  # image: jhauer1/hugo-build-deploy:v0.0.1
+  image: plugins/hugo
   environment:
-    AWS_DEFAULT_REGION: us-east-2
-      # from_secret: AWS_DEFAULT_REGION
+      from_secret: AWS_DEFAULT_REGION
     AWS_DEFAULT_REGION:
       from_secret: AWS_ACCESS_KEY_ID
     AWS_DEFAULT_REGION:
       from_secret: AWS_SECRET_ACCESS_KEY
   commands:
-    - echo $AWS_DEFAULT_REGION
+    - aws configure set default.region $AWS_DEFAULT_REGION
+    - aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
+    - aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
     - hugo deploy --target=mydeployment
