--- a/.drone.yml
+++ b/.drone.yml
@@ -26,6 +26,13 @@ steps:
 
 - name: infra deploy 
   image: jmccann/drone-terraform:6
+  environment:
+    AWS_DEFAULT_REGION:
+      from_secret: AWS_DEFAULT_REGION
+    AWS_ACCESS_KEY_ID:
+      from_secret: AWS_ACCESS_KEY_ID
+    AWS_SECRET_ACCESS_KEY:
+      from_secret: AWS_SECRET_ACCESS_KEY
   pull: if-not-exists
   plan: false
   remote:
