--- a/.drone.yml
+++ b/.drone.yml
@@ -35,6 +35,9 @@ steps:
       from_secret: AWS_SECRET_ACCESS_KEY
   pull: if-not-exists
   plan: false
+  secrets:
+    AWS_SECRET_ACCESS_KEY: AWS_SECRET_ACCESS_KEY
+    AWS_ACCESS_KEY_ID: AWS_ACCESS_KEY_ID
   remote:
     backend: s3
     config:
